# Episode-ReName

./: .gitignore  README.md  pyproject.toml  shell.nix
episode_rename/: EpisodeReName.py  __init__.py  custom_rules.py
episode_rename/utils/: config_utils.py  episode_utils.py  path_utils.py
