[project]
name = "EpisodeReName"
version = "1.4.1"
description = """
电视剧/番剧自动化重命名工具, 一键批量改名
可配合qBittorrent下载后自动重命名, 方便Emby自动刮削
支持Windows, Linux, MacOS, Docker和群晖套件环境运行
"""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true
line-length = 100
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | \.history
  | build
  | dist
  | docs
  | hack
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[project.scripts]
EpisodeReName = "episode_rename:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
